--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Test Launch",
             "request": "launch",
             "mainClass": "test.Main",
-            "vmArgs": "--module-path C:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib --add-modules javafx.controls,javafx.fxml,javafx.media"
         }
     ]
 }
