--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,21 @@
 {
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.base.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.controls.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.fxml.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.graphics.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.media.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.swing.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.web.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx-swt.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\jdk.jsobject.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\jfx.incubator.input.jar",
-        "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\jfx.incubator.richtext.jar",
-        "c:\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar"
-    ]
+    "java.project.referencedLibraries": {
+        "include": [
+            "lib/**/*.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.base.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.controls.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.fxml.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.graphics.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.media.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.swing.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx.web.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\javafx-swt.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\jdk.jsobject.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\jfx.incubator.input.jar",
+            "c:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib\\jfx.incubator.richtext.jar",
+            "c:\\sqlite-jdbc-3.49.1.0.jar"
+        ]
+    }
 }
