--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,13 +9,7 @@
             "name": "Application",
             "request": "launch",
             "mainClass": "Application",
-            "projectName": "CPE2201_TuneUp_c2d2d89c"
-        },
-        {
-            "type": "java",
-            "name": "Test Launch",
-            "request": "launch",
-            "mainClass": "test.Main",
+            "projectName": "CPE2201_TuneUp_c2d2d89c",
             "vmArgs": "--module-path C:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib --add-modules javafx.controls,javafx.fxml,javafx.media"
         }
     ]
