--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Application",
+            "name": "TuneUpApplication",
             "request": "launch",
-            "mainClass": "Application",
+            "mainClass": "TuneUpApplication",
             "projectName": "CPE2201_TuneUp_c2d2d89c",
             "vmArgs": "--module-path C:\\openjfx-24_windows-x64_bin-sdk\\javafx-sdk-24\\lib --add-modules javafx.controls,javafx.fxml,javafx.media"
         }
